--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
   server {
     
     listen 80;
-    server_name _;
+    server_name cassidymyflix.net;
 
     # Nginx will reject anything not matching our api
 
